@@ -17,6 +17,8 @@ Bug Fixes:
 - Fixed bug with EntityFindBase.updateAll() to not use EntityListIterator
   as it caused problems trying to update records with the ResultSet open
 - Added support for @confirmation attribute for hidden-form type links
+- Fixed issue where transition.path-parameter values were not making it
+  into the context since parameters were already added to the context
 
 ===========================================================================
 Release 1.1.1 - 22 Sep 2012
